2002-12-11	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Removed keyDown code from PsudoTerminal. 
      First responder is TEXTVIEW.


2002-12-11	fabian
    * Changed/Added several shortcut keys:
      command-left and right arrow: pre/next session
      command-Fn: switch to n-th session
      
2002-12-10	fabian
    * Rewritten all the encoding related code. Now all 
      the encodings that are available on the system will 
      be usable.
      (Note, the local settings file will have to be 
       manually updated)
    * Fixed a few inconsistencies in the interface about 
      transparency
    * Fixed a bug that make user unable to open a new 
      window from quick run and address book panel.
    * Now the version number is 0.5.5

2002-12-08	fabian
    * fixed a bug that causes crash when a ended session 
      is manually closed
    * now a warning panel will pop out when you try to 
      close an active session
    * session button uses gray to suggest the session has 
      ended, and session name is enclosed in []
    * fixed a bug in screenSizeInFrame() in VT100Screen.m,
      which makes row/col smaller than it should be
      (this one need more test)
      
2002-12-07	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Re-implemented transparency code to affect only text 
     instead of the whole window. Had to subclass NSWindow 
     since I ran into a nasty window redrawing Cocoa bug.
     
    * Instantiating scroll view in code rather than in NIB 
      to make layout look better.
      
    * PseudoTerminal is now a NSWindowController rather 
      than a NSResponder. Later I will refactor the code 
      to make is a true window controller.
      

2002-12-06	fabian
    * Fix (temporally) a bug that causes program to hang when a session is closed
    * Fix the NLog info in PTYSession.m

2002-12-05	fabian
    * Fix a bug that disable "clear buffer" in the menu
    * Fix a bug that causes incorrectly display of session status